src/Presentation/WebAdmin/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
/* ... */
.flag.flag-wf {background-position: -64px -165px}
.flag.flag-ws {background-position: -80px -165px}
.flag.flag-ye {background-position: -96px -165px}
.flag.flag-yt {background-position: -112px -165px}
.flag.flag-za {background-position: -128px -165px}
.flag.flag-zanzibar {background-position: -144px -165px}
.flag.flag-zm {background-position: -160px -165px}
.flag.flag-zw {background-position: -176px -165px}



/* Lists */
ul,
ol
{
	list-style: none;
}

.list.__inline,
.menu.__inline
{
	word-spacing: -4px;
}

	ul li,
	ol li
	{
		padding-left: 15px;
		text-indent: -15px;
	}

	ul li:before,
	ol li:before
	{
		content: '\2014\a0 ';
	}

	.list .list-item,
	.menu .menu-item
	{
		padding-left: 0;
		text-indent: 0;
	}

	.list .list-item:before,
	.menu .menu-item:before
	{
		content: '';
	}

	.__inline .list-item,
	.__inline .menu-item
	{
		display: inline-block;
		vertical-align: top;
		word-spacing: 0;
	}

.list.__notice
{
    
}

    .list.__notice .list-item
    {
        height: 29px;
        line-height: 29px;
        text-align: left;
    }

        .list.__notice .list-link
        {
            color: #4c4c4c;
            display: block;
            font-size: 14px;
            padding: 0 10px;
        }

        .list.__notice .list-link:hover
        {
            background: #ececec;
        }

            .list.__notice .list-ico
            {
                font-size: 18px;
                margin: 0 2px 0 0;
                width: 25px;
            }

            .list.__notice .list-item.__error .list-ico
            {
                color: #e51400;
            }

            .list.__notice .list-item.__warning .list-ico
            {
                color: #f0a30a;
            }


.menu.__context
{
	background: #333;
    display: none;
	position: fixed;
    padding: 10px 0;
    z-index: 100;
}

.menu.__context.open,
.menu.__context.__open
{
    display: block;
}

	.menu.__context .menu-item
	{
        color: #fff;
		font-size: 13px;
		padding: 5px 20px;
        text-shadow: none;
        white-space: nowrap;
	}

    .menu.__context .menu-item:hover
    {
        color: #43b0e6;
    }

		.menu.__context .menu-ico
		{
            font-size: 18px;
            width: 25px;
		}


/* Headings */
h1
{
	font-size: 330%;
}

h2
{
	font-size: 275%;
}

h3
{
	font-size: 200%;
}

.t
{
	font-size: 32px;
}

.sub-t
{
	font-size: 24px;
}

.text
{
	font-size: 14px;
	margin: 5px 0;
}

.sub-text
{
	font-size: 14px;
}

.text-mini
{
	font-size: 11px;
}

.t,
.sub-t
{
	font-weight: 300;
	line-height: 1;
	margin: 20px 0 10px;
}

.__right
{
    text-align: right;
}


/* Tables */
.table-wrapper
{
	margin: 0 -20px;
}

.table
{
	border-collapse: collapse;
	border-spacing: 0;
	padding: 0;
	width: 100%;
}

	.table .table-item
	{
		cursor: pointer;
	}

	.table .table-col
	{
		border-bottom: 1px solid #dee9f0;
		font-size: 14px;
		padding: 10px;
		text-align: left;
		text-shadow: 1px 1px #fff;
	}

		.table-col .table-t,
		.table-col .table-descr
		{
			display: block;
			font-size: 12px;
		}

		.table-col .table-t
		{
			font-weight: 500;
			margin: 0 0 5px;
		}

	.table .table-col.__date
	{
		font-size: 12px;
		vertical-align: top;
		width: 20%;
	}

	.table .table-col.__product-control
	{
		width: 20px;
	}

	.table .table-col.__product-img
	{
		width: 60px;
	}

	.table .table-col.__product-name
	{
		max-width: 250px;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

    .table .table-col.__product-code
    {
        white-space: nowrap;
    }

		.table-col .table-date
		{
			color: #999;
		}

		.table-col .product-img
		{
			height: 40px;
		    line-height: 40px;
		    text-align: center;
		    width: 40px;
		}

        .table-col .table-img
        {
            border: none;
            height: auto;
            max-width: 40px;
            vertical-align: middle;
        }

		.product-img .image
		{
			background-blend-mode: darken;
		    background-position: 50% 50%;
		    background-repeat: no-repeat;
		    background-size: contain;
		    height: 100%;
		    position: relative;
		    width: 100%;
		}

		.table-item:hover .product-img .image
		{
			background-color: #ecf7fc;
		}

		.table-item.__selected .product-img .image
		{
			background-color: #d9effa;
		}

	.table th.table-col
	{
		background: rgba(0,0,0,.025);
		border-color: rgba(0,0,0,.05);
		font-size: 14px;
		font-weight: 500;
        line-height: 1.3;
	}

	.table .table-col:first-child
	{
		padding-left: 20px;
	}

	.table .table-col:last-child
	{
		padding-right: 20px;
	}

	.table .table-progress
	{
		margin: 10px 0 0;
		position: relative;
	}

	.table .table-ico
	{
		color: #a6a6a6;
		font-size: 28px;
        margin: -4px 0 0;
		text-shadow: 1px 1px #fff;
		vertical-align: middle;
	}

	.table-item.__error .table-ico
	{
		color: #e51400;
	}

	.table-item.__warning .table-ico
	{
		color: #f0a30a;
	}

	.table-item.__info .table-ico
	{
		color: #43b0e6;
	}


/* Forms */
fieldset
{
	border: none;
}

fieldset + fieldset
{
	margin: 15px 0 0;
}

	fieldset legend
	{
		border-bottom: 1px solid #dee9f0;
		display: block;
		font-size: 24px;
		font-weight: 300;
		margin: 0 0 15px;
		padding: 0 0 5px;
		width: 100%;
	}

.form
{
	margin: 15px 0;
}

.form-group + .form-group
{
	margin: 15px 0 0;
}

    .form-group .form-hint
    {
        color: #999;
        font-size: 12px;
    }

    .form-group .form-error
    {
        background: #fef8f7;
        border: 1px solid #fce7e6;
        color: #e51400;
        font-size: 12px;
        line-height: 1.4;
        padding: 10px;
    }

        .form-group .form-error *
        {
            display: block;
        }

    .form-group .form-input ~ .form-error,
    .form-group .form-input ~ .form-hint
    {
        margin: 5px 0 0;
    }

	.form .form-input
	{
		position: relative;
	}

    .form .form-input + .form-input
    {
        margin: 15px 0 0;
    }

	.form .form-count
	{
		font-size: 14px;
	}

	.count
	{
		color: #43b0e6;
		font-weight: 600;
	}
/* ... */

